--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <!--Section 1-->
-      <section class="section-1 center">
+      <section class="section-1 center" id="section-1">
         <h1 class="section-1-heading">Web Developer</h1>
         <img
           src="https://is5-ssl.mzstatic.com/image/thumb/Purple123/v4/6e/17/54/6e17540b-2099-0a6f-5b56-6dd975a5a6d5/source/256x256bb.jpg"
@@ -26,39 +26,39 @@
           class="person-img"
         />
         <h3 class="person-name">Mark Scholes</h3>
-        <a href="#" class="section-1-btn">Projects</a>
+        <a href="#section-3" class="section-1-btn">Projects</a>
       </section>
       <!--End of section 1-->
       <!--Navbar-->
       <nav class="navbar center">
-        <a href="#" class="navbar-link">Home</a>
-        <a href="#" class="navbar-link">About</a>
-        <a href="#" class="navbar-link">Portfolio</a>
-        <a href="#" class="navbar-link">Contact</a>
+        <a href="#section-1" class="navbar-link">Home</a>
+        <a href="#section-2" class="navbar-link">About</a>
+        <a href="#section-3" class="navbar-link">Portfolio</a>
+        <a href="#section-4" class="navbar-link">Contact</a>
       </nav>
       <!-- End of Navbar-->
       <!--Section 2-->
-      <section class="section-2">
+      <section class="section-2" id="section-2">
         <h1 class="section-heading section-2-heading">About Me</h1>
         <div class="progress-bars-wrapper">
           <div class="progress-bar">
-            <p class="progress-text">HTML <span>97</span>%</p>
+            <p class="progress-text">HTML <span></span>%</p>
             <div class="progress-percent"></div>
           </div>
           <div class="progress-bar">
-            <p class="progress-text">CSS <span>97</span>%</p>
+            <p class="progress-text">CSS <span></span>%</p>
             <div class="progress-percent"></div>
           </div>
           <div class="progress-bar">
-            <p class="progress-text">JavaScript <span>97</span>%</p>
+            <p class="progress-text">JavaScript <span></span>%</p>
             <div class="progress-percent"></div>
           </div>
           <div class="progress-bar">
-            <p class="progress-text">React <span>97</span>%</p>
+            <p class="progress-text">React <span></span>%</p>
             <div class="progress-percent"></div>
           </div>
           <div class="progress-bar">
-            <p class="progress-text">Node.js <span>97</span>%</p>
+            <p class="progress-text">Node.js <span></span>%</p>
             <div class="progress-percent"></div>
           </div>
         </div>
@@ -84,7 +84,7 @@
       <!--end of Section 2-->
       <!-- Section 3 -->
 
-      <section class="section-3">
+      <section class="section-3" id="section-3">
         <h1 class="section-heading">My Projects</h1>
         <div class="project-wrapper center">
           <div class="project">
@@ -193,7 +193,7 @@
       </section>
       <!-- End of Section 3 -->
       <!--Section 4 Contact form-->
-      <section class="section-4">
+      <section class="section-4" id="section-4">
         <h1 class="section-heading section-4-heading">Contact Me</h1>
         <form class="contact-form center">
           <input type="text" placeholder="Name" />
@@ -206,16 +206,16 @@
       <!-- Section 5-->
       <footer class="section-5 center">
         <div class="social-media">
-          <a href="#" class="social-media-link">
+          <a href="none" class="social-media-link">
             <i class="fab fa-github-square"></i>
           </a>
-          <a href="#" class="social-media-link">
+          <a href="none" class="social-media-link">
             <i class="fab fa-youtube"></i>
           </a>
-          <a href="#" class="social-media-link">
+          <a href="none" class="social-media-link">
             <i class="fab fa-facebook-square"></i>
           </a>
-          <a href="#" class="social-media-link">
+          <a href="none" class="social-media-link">
             <i class="fab fa-instagram-square"></i>
           </a>
         </div>
